# RustConf2024

./: .gitignore  README.md
code/: Cargo.toml
code/accumulate/: Cargo.toml
code/accumulate/src/: main.rs
code/blazing_fast/: Cargo.toml
code/blazing_fast/src/: main.rs
code/blazing_fast2/: Cargo.toml
code/blazing_fast2/src/: main.rs
code/blazing_fast3/: Cargo.toml
code/blazing_fast3/src/: main.rs
code/channelize/: Cargo.toml
code/channelize/src/: main.rs
code/data_builder/: Cargo.toml
code/data_builder/src/: main.rs
code/fast_hasher/: Cargo.toml
code/fast_hasher/src/: main.rs
code/memory_map/: Cargo.toml
code/memory_map/src/: main.rs
code/parallel/: Cargo.toml
code/parallel/src/: main.rs
code/simple_line_reader/: Cargo.toml
code/simple_line_reader/src/: main.rs
code/simple_line_reader2/: Cargo.toml
code/simple_line_reader2/src/: main.rs
code/tokio_challenge/: Cargo.toml
code/tokio_challenge/src/: main.rs
manual/: book.toml
manual/src/: SUMMARY.md  a-really-simple-reader-2.md  a-really-simple-reader-3.md  a-really-simple-reader-4.md  a-really-simple-reader-5.md  a-really-simple-reader-6.md  a-really-simple-reader-7.md  a-really-simple-reader.md  accessing-the-code.md  accumulate-2.md  accumulate-3.md  accumulate.md  add-a-channel.md  async-trap-2.md  async-trap-3.md  async-trap.md  bytes-vs-characters.md  combine-read-hash-2.md  combine-read-hash-3.md  combine-read-hash.md  create-the-data-code.md  create-the-data.md  final-timings.md  how-fast-can-we-go.md  introduction.md  lets-be-unreasonable.md  mmap1-2.md  mmap1-3.md  (+19 more)
(+1 files in other folders)
